# personal-page

./: README.md  build-output.txt  build.gradle
server/: LICENSE  README.md  pyproject.toml
server/manga_readme/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  server.py
src/app/: page.tsx
src/components/: bubble-editor.tsx  export-options.tsx  generation-view.tsx  header.tsx  manga-canvas.tsx  provider-config.tsx  user-input-form.tsx
src/hooks/: use-generation.ts
src/lib/: canvas-renderer.ts  constants.ts
src/lib/providers/: google.ts  huggingface.ts  index.ts  local-sd.ts  openai.ts  replicate.ts  stability.ts
src/store/: app-store.ts
src/types/: index.ts
